# silverbitcoin

./: API-REFERENCE.md  Cargo.toml  Makefile  README.md  TOKENOMICS.md  WHITEPAPER.md  clippy.toml  genesis-mainnet.json  genesis-testnet.json  genesis.json  genesis.json.example  node-consumer.toml.example  node-public-rpc.toml.example  node-with-metrics.toml.example  node.toml.example  rustfmt.toml  tokenomics-report.json
crates/silver-api/: Cargo.toml  EVENT_SUBSCRIPTION_GUIDE.md  RPC_SERVER_GUIDE.md
crates/silver-api/src/: endpoints.rs  lib.rs  main.rs  rate_limit.rs  rpc.rs  subscriptions.rs
crates/silver-archive-chain/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/silver-archive-chain/src/: consensus.rs  error.rs  indexing.rs  lib.rs  merkle.rs  peer_sync.rs  proof_generator.rs  query.rs  schema.rs  storage.rs  sync.rs  types.rs
crates/silver-cli/: Cargo.toml
crates/silver-cli/src/: main.rs
crates/silver-cli/src/commands/: call.rs  codegen.rs  devnet.rs  keygen.rs  mod.rs  query.rs  simulate.rs  transfer.rs
crates/silver-consensus/: Cargo.toml  PROTOCOL_UPGRADE.md
crates/silver-consensus/src/: activation.rs  cascade.rs  commission.rs  compatibility.rs  delegation.rs  flow_graph.rs  lib.rs  mercury.rs  optimizations.rs  rewards.rs  snapshot.rs  staking.rs  upgrade.rs  validator.rs  validator_keys.rs  validator_ops.rs  validator_tiers.rs
crates/silver-coordinator/: Cargo.toml  README.md
crates/silver-coordinator/src/: coordinator.rs  error.rs  lib.rs  lifecycle.rs  sponsorship.rs  submission.rs
crates/silver-core/: Cargo.toml
crates/silver-core/src/: address.rs  consensus.rs  error.rs  hash.rs  lib.rs  object.rs  protocol.rs  signature.rs  tokenomics.rs  transaction.rs
crates/silver-crypto/: Cargo.toml
crates/silver-crypto/src/: encryption.rs  hashing.rs  keys.rs  lib.rs  signatures.rs
crates/silver-execution/: Cargo.toml
crates/silver-execution/src/: effects.rs  event_emitter.rs  executor.rs  fuel.rs  lib.rs  parallel_optimized.rs  verifier.rs  vm.rs
crates/silver-gpu/: Cargo.toml  IMPLEMENTATION.md
crates/silver-gpu/src/: backend.rs  executor.rs  hashing.rs  lib.rs  scheduler.rs  signature_verification.rs
crates/silver-gpu/src/kernels/: blake3_hash.cl  ed25519_verify.cl  ed25519_verify.cu  ed25519_verify.metal
crates/silver-network/: Cargo.toml
crates/silver-network/src/: behaviour.rs  compression.rs  config.rs  discovery.rs  error.rs  gossip.rs  lib.rs  message.rs  peer.rs  security.rs  sync.rs
crates/silver-node/: Cargo.toml  IMPLEMENTATION.md  MONITORING.md
crates/silver-node/src/: config.rs  genesis.rs  health.rs  lifecycle.rs  logging.rs  main.rs  memory.rs  metrics.rs  node.rs  resources.rs
crates/silver-sdk/: Cargo.toml  README.md
crates/silver-sdk/examples/: codegen_example.rs
crates/silver-sdk/src/: client.rs  codegen.rs  lib.rs  transaction_builder.rs  types.rs
crates/silver-storage/: Cargo.toml
crates/silver-storage/src/: attributes.rs  cache.rs  db.rs  error.rs  event_store.rs  lib.rs  object_store.rs  ownership.rs  recovery.rs  snapshot_store.rs  transaction_store.rs
crates/silver-zksnark/: Cargo.toml  README.md
crates/silver-zksnark/benches/: proof_generation.rs
crates/silver-zksnark/src/: circuit.rs  consensus.rs  error.rs  gpu.rs  lib.rs  light_client.rs  mainnet.rs  merkle.rs  prover.rs  recursive.rs  testnet.rs  trusted_setup.rs  types.rs  verifier.rs
data/mainnet/: validator1.toml  validator2.toml  validator3.toml  validator4.toml
data/mainnet/keys/: validator_1.json  validator_2.json  validator_3.json  validator_4.json
data/mainnet/validator1/logs/: node.log.2025-11-18
data/mainnet/validator2/logs/: node.log.2025-11-18
data/mainnet/validator3/logs/: node.log.2025-11-18
data/mainnet/validator4/logs/: node.log.2025-11-18
data/testnet/: validator1.toml  validator2.toml  validator3.toml
data/testnet/keys/: validator1.json  validator2.json  validator3.json
data/testnet/validator1/logs/: node.log.2025-11-17
data/testnet/validator2/logs/: node.log.2025-11-17
data/testnet/validator3/logs/: node.log.2025-11-17
quantum/quantum-cli/: Cargo.toml
quantum/quantum-cli/src/: dependency.rs  lockfile.rs  main.rs  manifest.rs  package.rs  registry.rs
quantum/quantum-cli/src/commands/: build.rs  mod.rs  new.rs  publish.rs  test.rs
quantum/quantum-compiler/: Cargo.toml
quantum/quantum-compiler/src/: borrow_checker.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  type_checker.rs
quantum/quantum-stdlib/: Cargo.toml
quantum/quantum-stdlib/src/: lib.rs  math.rs  object.rs  option.rs  string.rs  vector.rs
quantum/quantum-vm/: Cargo.toml
quantum/quantum-vm/src/: bytecode.rs  interpreter.rs  lib.rs  native.rs  runtime.rs  verifier.rs
scripts/: build-cross-platform.sh  build-release.sh  generate-tokenomics.py  generate-validator-keys.sh  test-consumer-hardware.sh  verify-low-fees.sh
