[workspace]
resolver = "2"
members = [
    "crates/silver-core",
    "crates/silver-consensus",
    "crates/silver-execution",
    "crates/silver-storage",
    "crates/silver-network",
    "crates/silver-api",
    "crates/silver-crypto",
    "crates/silver-cli",
    "crates/silver-sdk",
    "crates/silver-node",
    "crates/silver-gpu",
    "crates/silver-coordinator",
    "crates/silver-zksnark",
    "quantum/quantum-compiler",
    "quantum/quantum-vm",
    "quantum/quantum-stdlib",
    "quantum/quantum-cli",
    "crates/silver-light-client",
    "crates/silver-archive-chain",
    "benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
authors = ["SilverBitcoin Team <team@silverbitcoin.org>"]
license = "Apache-2.0"
repository = "https://github.com/silverbitcoin/silverbitcoin"
homepage = "https://silverbitcoin.org"
keywords = ["blockchain", "cryptocurrency", "quantum-resistant", "consensus"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
toml = "0.8"

# Cryptography - Post-Quantum
pqcrypto-sphincsplus = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Cryptography - Classical
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
p521 = "0.13"  # NIST P-521 (Secp512r1) - stable version
blake3 = { version = "1.5", features = ["rayon", "mmap"] }
sha2 = "0.10"
sha3 = "0.10"

# Cryptography - Encryption
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
zeroize = { version = "1.7", features = ["derive"] }

# Cryptography - Key Management
bip32 = "0.5"
bip39 = { version = "2.0", features = ["rand"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"

# Storage
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
lz4 = "1.24"

# Networking
libp2p = { version = "0.53", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "mdns",
    "dns",
    "tokio",
    "macros",
] }
multiaddr = "0.18"

# RPC and API
jsonrpsee = { version = "0.21", features = ["server", "client", "ws-client", "http-client", "macros"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
hyper = "1.1"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Database (Indexer - PostgreSQL only, no MongoDB)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0"

# GPU Acceleration (defined in silver-gpu crate directly)
# ocl, cudarc, and metal are optional and defined per-crate

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"
eyre = "0.6"

# Utilities
bytes = "1.5"
hex = "0.4"
base64 = "0.21"
bs58 = "0.5"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"
lru = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive", "env", "cargo"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
colored = "2.1"

# Configuration
config = "0.14"
dotenv = "0.15"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8"
mockall = "0.12"

# Development
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
