[package]
name = "silver-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC API gateway for SilverBitcoin blockchain"

[[bin]]
name = "silver-rpc-server"
path = "src/main.rs"

[dependencies]
# Core
silver-core = { path = "../silver-core" }
silver-storage = { path = "../silver-storage" }
silver-execution = { path = "../silver-execution" }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# RPC and API
jsonrpsee = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
hex = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
