[package]
name = "silver-archive-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Storage
rocksdb = { workspace = true }
lz4 = { workspace = true }

# Cryptography
blake3 = { workspace = true }
pqcrypto-sphincsplus = { workspace = true }

# Utilities
bytes = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

# Local dependencies
silver-core = { path = "../silver-core" }
silver-crypto = { path = "../silver-crypto" }
silver-storage = { path = "../silver-storage" }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
