[package]
name = "silver-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for SilverBitcoin blockchain"

[[bin]]
name = "silver"
path = "src/main.rs"

[dependencies]
# Core
silver-core = { path = "../silver-core" }
silver-crypto = { path = "../silver-crypto" }
silver-sdk = { path = "../silver-sdk" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
colored = { workspace = true }

# Encoding
hex = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }

# Configuration
config = { workspace = true }
dotenv = { workspace = true }
toml = { workspace = true }

# System
dirs = "5.0"

# Unix-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
tempfile = { workspace = true }
