[package]
name = "silver-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Mercury Protocol consensus engine with Cascade mempool for SilverBitcoin"

[dependencies]
# Core
silver-core = { path = "../silver-core" }
silver-crypto = { path = "../silver-crypto" }
silver-storage = { path = "../silver-storage" }
silver-network = { path = "../silver-network" }

# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
