[package]
name = "silver-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and primitives for SilverBitcoin blockchain"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
p521 = { workspace = true }
pqcrypto-sphincsplus = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
