[package]
name = "silver-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for building SilverBitcoin applications"

[dependencies]
# Core
silver-core = { path = "../silver-core" }
silver-crypto = { path = "../silver-crypto" }

# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

# RPC Client
jsonrpsee = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
