[package]
name = "silver-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RocksDB-based persistent storage for SilverBitcoin blockchain"

[dependencies]
# Core
silver-core = { path = "../silver-core" }

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Storage
rocksdb = { workspace = true }
lz4 = { workspace = true }

# System
num_cpus = "1.16"
sysinfo = "0.30"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
