[package]
name = "quantum-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Quantum language compiler for SilverBitcoin smart contracts"

[dependencies]
# Core
silver-core = { path = "../../crates/silver-core" }
quantum-vm = { path = "../quantum-vm" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
