[package]
name = "quantum-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Quantum VM bytecode interpreter for SilverBitcoin"

[dependencies]
# Core
silver-core = { path = "../../crates/silver-core" }
silver-crypto = { path = "../../crates/silver-crypto" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
